--- a/mern-stack-crud/package.json
+++ b/mern-stack-crud/package.json
@@ -11,10 +11,16 @@
     "body-parser": "^1.18.2",
     "bootstrap": "^4.1.3",
     "express": "^4.16.2",
+    "moment": "^2.22.2",
     "mongoose": "^4.12.4",
     "morgan": "^1.9.0",
+    "rc-checkbox": "^2.1.5",
     "react": "^16.0.0",
+    "react-checkbox-group": "^4.0.1",
+    "react-datepicker": "^1.6.0",
     "react-dom": "^16.0.0",
+    "react-radio-buttons": "^1.2.2",
+    "react-radio-group": "^3.0.3",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.14",
     "react-select": "^2.0.0",
