--- a/mern-stack-crud/package.json
+++ b/mern-stack-crud/package.json
@@ -14,6 +14,7 @@
     "moment": "^2.22.2",
     "mongoose": "^4.12.4",
     "morgan": "^1.9.0",
+    "prop-types": "^15.6.2",
     "rc-checkbox": "^2.1.5",
     "react": "^16.0.0",
     "react-checkbox-group": "^4.0.1",
